cabal-version:      3.0
name:               aoc2024

version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
license:            MIT

license-file:       LICENSE

author:             tiwwi

maintainer:         gumming_proxy156@simplelogin.com

category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AOCFiles,
        Day01, Day02, Day03, Day04, Day05,
        Day06, Day07, Day08, Day09, Day10,
        Day11, Day12, Day13, Day14, Day15,
        Day16, Day17, Day18, Day19, Day20,
        Day21, Day22, Day23, Day24, Day25,

    other-modules: Helpers, Helpers.Matrix, Helpers.Text, Helpers.List
    hs-source-dirs: src
    default-language: GHC2021
    hs-source-dirs:   src
    build-depends:
        base,
        text,
        array,
        containers,
        attoparsec,
        directory,
        bytestring,
        linear,
        http-conduit,
        vector,

executable aoc2024
    main-is:          Main.hs
    other-modules: 
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base,
        time,
        deepseq,
        aoc2024

test-suite aoc2024-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:
        base,
        aoc2024,
        tasty,
        tasty-hunit,
        filepath
